# scrappingchef

./: .cursorignore  .envrc_template  .gcloudignore  .gitignore  Makefile  README.md  app.yaml  database_migration.py  main.py  manage.py  migrate_to_postgres.py  move_contents_to_gcs.py  pyproject.toml  requirements.txt
infra/: main.tf
platform_new/: apps.py  decorators.py  models.py  serializers.py  urls.py  views.py
platform_new/models/: __init__.py  models.py  step_type.py
platform_new/scrapper/: content_scrapping.py  logger.py  pagination.py  path_extraction.py  path_training_scrapping.py  scrapper.py  step_scrapping.py  training_extraction.py
platform_new/templates/platform_new/: contents.html  paths.html  paths_and_trainings.html  steps.html  trainings.html
platform_old/: apps.py  asgi.py  connect.py  enums.py  models.py  scrapper.py  serializers.py  urls.py  utils.py  views.py
platform_old/templates/platform_old/: contents.html  courses.html  modules.html
platform_old/tests/: test_contents.py  test_courses.py  test_modules.py
scrappingchef/: settings.py  urls.py  utils.py  wsgi.py
