[tool.poetry]
name = "scrappingchef"
version = "0.1.0"
description = ""
authors = ["JeanArnaudRitouret <86613080+JeanArnaudRitouret@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
